# matcha

./: .gitignore  CMakeLists.txt  README.md
examples/: input.csv  parser-test-errlogs.txt  parser-test-input.csv  test.csv
examples/book/: book-test-errors.txt  book-test-input.csv  book-test-output.txt
examples/parser/: input.csv  parser-test-output.txt
include/: constants.hpp  itch-structs.hpp  ladder.hpp  levels.hpp  memManage.hpp  order-book.hpp  orders.hpp  parser.hpp
scripts/: build  format
scripts/hooks/: pre-commit  pre-push
src/: ladder.cpp  main.cpp  memManage.cpp  order-book.cpp  parser.cpp
tests/: test-itch-gen.cpp  test-parser.cpp
tools/itch-gen/: CMakeLists.txt
tools/itch-gen/include/: bin-generator.hpp  parser.hpp
tools/itch-gen/src/: bin-generator.cpp  main.cpp  parser.cpp
